--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <h2>Informations- und Telekommunikations System Elektroniker</h2>
     <nav>
         <ul>
-            <li><a href="/home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/kontakt">Kontakt</a></li>
         </ul>
     </nav>
