--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/kontakt">Kontakt</a></li>
+            <li><a href="/kontakt/">Kontakt</a></li>
         </ul>
     </nav>
     <main>
@@ -31,15 +31,14 @@
         <section>
         <h3>Kontakt</h3>
 
-        <form action="sendeadresse">me@email.com</form>
+        <form action="emailadresse">me@email.com</form>
         </section>
         <footer>
             <h3>Credits</h3>
             <p>Danke an
                 <a href="https://www.techstarter.de" target="_blank">Techstarter</a>
-    
             </p>
-            </footer>
+        </footer>
     </main>
 </body>
 </html>
